--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "Fullstack App Project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "express": "^4.16.2"
+  },
+  "dependencies": {
+    "mocha": "^4.0.1"
   }
 }
