--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "mocha": "^3.5.3"
   },
-  "dependencies": {
-    "mocha": "^4.0.1"
-  }
+  "dependencies": {}
 }
