--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Fullstack App Project",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "NODE_ENV=test mocha --exit"
   },
   "author": "",
   "license": "ISC",
@@ -12,7 +12,7 @@
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "express": "^4.16.2",
-    "mocha": "^3.5.3"
+    "mocha": "^4.0.1"
   },
   "dependencies": {}
 }
