--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
-    "express": "^4.16.2",
     "mocha": "^4.0.1"
   },
-  "dependencies": {}
+  "dependencies": {"express": "^4.16.2"}
 }
