--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "chai-http": "^3.0.0",
     "mocha": "^4.0.1"
   },
-  "dependencies": {"express": "^4.16.2"}
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "mongoose": "^4.13.5"
+  }
 }
