--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
+    "faker": "^4.1.0",
     "mocha": "^4.0.1"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "mongoose": "^4.13.5"
+    "mongoose": "^4.13.5",
+    "morgan": "^1.9.0"
   }
 }
